--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+actix-web = "4"
+shuttle-actix-web = "0.55"
+shuttle-runtime = "0.55"
+tokio = "1"
